--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -104,7 +104,7 @@
                         <strong>{{ exam.course_code }}</strong><br>
                         {{ exam.course_name }}<br>
                         <small>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</small>
-                    </div>
+                    </div><br>
                 {% endfor %}
             </div>
         {% endfor %}
