--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -85,6 +85,7 @@
                 {% set positions = [] %}
 
                 {% for exam in sorted_exams %}
+                    {# Determine which row (y-position) the exam should go to #}
                     {% set row_index = 0 %}
                     {% for p in positions %}
                         {% if exam.start_time < p.end and exam.end_time > p.start %}
@@ -98,7 +99,8 @@
                     {% set left_pos = start_hour * 100 %}
                     {% set width = (end_hour - start_hour) * 100 %}
 
-                    <div class="exam-block" style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ row_index * 60 }}px;">
+                    <div class="exam-block"
+                        style="left:{{ left_pos }}px; width:{{ width }}px; top:{{ row_index * 60 }}px;">
                         <strong>{{ exam.course_code }}</strong><br>
                         {{ exam.course_name }}<br>
                         <small>{{ exam.venue }} | {{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</small>
