--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -68,17 +68,27 @@
 {% block content %}
 <div class="menu-section">
     <h3>List of All Exam Sessions Details</h3>
-
     <div class="calendar-container">
-        <!-- Header Row for Time -->
+        <!-- Calendar Header with Date and Time -->
         <div class="calendar-header">
-            {% for hour in range(0, 24) %}
-                <div class="calendar-hour">{{ "%02d:00"|format(hour) }}</div>
-            {% endfor %}
+            <div class="date-row">
+                {% for date, _ in calendar_data.items() %}
+                    <div class="date-cell" style="grid-column: span 24;">
+                        {{ date.strftime("%d %b (%A)") }}
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="time-row">
+                {% for date, _ in calendar_data.items() %}
+                    {% for hour in range(0, 24) %}
+                        <div class="calendar-hour">{{ "%02d:00"|format(hour) }}</div>
+                    {% endfor %}
+                {% endfor %}
+            </div>
         </div>
 
+        <!-- Calendar Body -->
         {% set hour_width = 80 %}
-
         {% for date, exams in calendar_data.items() %}
             {% set sorted_exams = exams | sort(attribute='start_time') %}
             {% set positions = [] %}
@@ -91,8 +101,6 @@
             {% endfor %}
 
             <div class="calendar-day">
-                <div class="day-label">{{ date.strftime("%d %b (%A)") }}</div>
-
                 {% for i in range(sorted_exams|length) %}
                     {% set exam = sorted_exams[i] %}
                     {% set pos = positions[i] %}
