--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -302,7 +302,7 @@ html, body {
 
 /* Empty top-left cell (in time header row) */
 .time-label {
-    background: #fff;
+    background: #333;
 }
 
 /* Timeline hours (in header row) */
@@ -322,7 +322,9 @@ html, body {
     position: relative;
     background: white;
     border-left: 1px solid #ccc;
+    min-height: 60px;
 }
+
 
 /* Exam block */
 .exam-block {
